HousingForce/src/objects/Service_Appointment__c.object
<CustomObject>
    <fields>
        <fullName>Cleaning_Reason__c</fullName>
        <label>Cleaning Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type_of_Service__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Routine</fullName>
                </value>
                <value>
                    <fullName>Temporary</fullName>
                </value>
                <value>
                    <fullName>Single Time</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>Date of scheduled service Appointment</description>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DayOfWeek__c</fullName>
        <description>Grabs the day of the week</description>
        <formula>WEEKDAY(Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DayOfWeek</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Housing__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Housing</label>
        <referenceTo>Housing__c</referenceTo>
        <relationshipLabel>Service Appointments</relationshipLabel>
        <relationshipName>Service_Appointments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Maintenance_Reason__c</fullName>
        <label>Maintenance Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type_of_Service__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Routine</fullName>
                </value>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Reason__c</fullName>
        <description>This is for the other reason picklist for both cleaning and maintance and if either one is picked</description>
        <label>Other Reason</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Interval__c</fullName>
        <description>How often cleaning the apartment, (how often housing is cleaned)</description>
        <label>Service Interval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <description>The time of the scheduled service</description>
        <label>Time</label>
        <required>true</required>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Type_of_Service__c</fullName>
        <label>Type of Service</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cleaning</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Service Appointment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Company_Name__c</columns>
        <columns>Date__c</columns>
        <columns>Time__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>alll</fullName>
        <columns>NAME</columns>
        <columns>Cleaning_Reason__c</columns>
        <columns>Company_Name__c</columns>
        <columns>Housing__c</columns>
        <columns>Type_of_Service__c</columns>
        <columns>Date__c</columns>
        <columns>Time__c</columns>
        <filterScope>Mine</filterScope>
        <label>alll</label>
    </listViews>
    <nameField>
        <displayFormat>S{00000000}</displayFormat>
        <label>Service Appointment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Appointments</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Other_Reason_Required</fullName>
        <active>true</active>
        <description>This is a validation for checking if other is selected in either the mainance or cleaning reasons</description>
        <errorConditionFormula>IF((ISPICKVAL(Cleaning_Reason__c,&apos;Other&apos;)&amp;&amp; ISBLANK(Other_Reason__c)) || (ISPICKVAL(Maintenance_Reason__c,&apos;Other&apos;)&amp;&amp;ISBLANK(Other_Reason__c)),true,false)</errorConditionFormula>
        <errorDisplayField>Other_Reason__c</errorDisplayField>
        <errorMessage>Reason for selecting other(This is Required).</errorMessage>
    </validationRules>
</CustomObject>